package de.flozo.running.model;

public enum EnergyUnit {

    KILO_CALORIES("kcal"),
    KILO_JOULE("kJ");


    private final String unit;

    EnergyUnit(String unit) {
        this.unit = unit;
    }

    

}
