package de.flozo.running.model;

public enum EventType {
    TRAINING,
    RACE
}
